# trabalho_pos_eng.prompt

./: README.md  pyproject.toml
TRABALHO/: analise_transcricao_consulta.py
